...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qRd-eI-6wU" secondAttribute="trailing" constant="4" id="pUB-X0-tqh"/>
                            <constraint firstItem="qRd-eI-6wU" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="tBE-qT-cwI"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="JD2-NU-IWJ">
                        <barButtonItem key="leftBarButtonItem" title="Help" id="HjP-YS-90S">
                            <connections>
                                <segue destination="V4C-X8-t64" kind="show" id="DLK-Mx-wXV"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="Add" id="dkV-rX-IQu">
...
